--- a/app/scss/register.scss
+++ b/app/scss/register.scss
@@ -38,7 +38,7 @@
 				span{
 					display: none;
 					position: absolute;
-					top: 48;
+					top: 86px;
 					left: 0;
 					color: #e52837;
 					font-size: 12px;
