--- a/app/scss/component/header.scss
+++ b/app/scss/component/header.scss
@@ -222,6 +222,7 @@ nav{
 		background: #FFFFFF;
 		overflow: hidden;
 		display: none;
+		z-index: 9999;
 		.cart-bottom{
 			padding: 19px;
 			border-top: 1px solid #1d1d1d;
